--- a/src/views/users/user_sign_up.ejs
+++ b/src/views/users/user_sign_up.ejs
@@ -1,6 +1,6 @@
 <h1>Sign Up</h1>
 
-<form action="">
+<form action="/users/create" method="POST">
     <input type="text" name="name" placeholder="UserName" required>
     <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
