--- a/src/views/users/user_profile.ejs
+++ b/src/views/users/user_profile.ejs
@@ -1,1 +1,5 @@
- <h1>Welcome  <%="Manjot"%></h1>
+<link rel="stylesheet" href="/css/user_profile.css">
+<h1>Welcome  <%="Manjot"%></h1>
+
+<p><%= user.name %></p>
+<p><%= user.email %></p>
