--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,10 +1,21 @@
 
 <h1>Welcome to <%= title %></h1>
-
+<% if(locals.user) { %> 
 <section>
     <h4>Create a Tweet!</h4>
     <form action="/tweets/create" method="POST">
         <textarea name="content" id="" cols="30" rows="10" placeholder="Your Tweet..."></textarea>
         <input type="submit" value="create tweet ">
     </form>
-</section> 
+</section>
+
+<% } %> 
+
+<div>
+    <ul>
+        <% for(tweet of tweets){ %> 
+            <li><%= tweet.content %> </li>
+            <small><%= tweet.user.name %> </small>
+        <% } %> 
+    </ul>
+</div>
