--- a/src/views/users/user_sign_in.ejs
+++ b/src/views/users/user_sign_in.ejs
@@ -1,8 +1,24 @@
-<h1>Sign In</h1>
+<link rel="stylesheet" href="/css/user.css">
+<h1 class="head">Log in to Twitter</h1>
+
+<div class="signin-form">
+    <form action="/users/create-session" method="POST">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+        </div>
+    
+        <button type="submit" class="btn btn-primary">Login</button>
+      </form>
+     
+</div>
+<div class="sign-up-link">
+    <a href="/users/signup" class="link-dark">Sign up for Twitter</a>
+</div>
 
 
-<form action="/users/create-session" method="POST">
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="submit" value="Login">
-</form>
