--- a/src/views/util/_header.ejs
+++ b/src/views/util/_header.ejs
@@ -1,15 +1,39 @@
-<ul>
-    <% if(locals.user) { %>
-        Hi <li><%= user.name %></li>
-        <li>
-            <a href="/users/signout">Sign Out</a>
-        </li>
-    <% } else { %>
-        <li>
-            <a href="/users/signin">Sign In</a>
-        </li>
-        <li>
-            <a href="/users/signup">Sign Up</a>
-        </li>
-    <%}%>
-</ul>
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Welcome to Twitter</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          
+          <% if(locals.user) { %> 
+         
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Hi <%= user.name %> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/signout">Log Out</a>
+          </li>
+
+          <% } else { %> 
+
+            <li class="nav-item">
+                <a class="nav-link" href="/users/signin">Sign In</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/signup">Sign Up</a>
+              </li>
+
+            <% } %> 
+         
+        </ul>
+      </div>
+    </div>
+  </nav>
+</nav>
+  
