--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,7 +3,7 @@
 <section>
     <h4>Create a Tweet!</h4>
     <form action="/tweets/create" method="POST">
-        <textarea name="content" id="" cols="30" rows="10" placeholder="Your Tweet..."></textarea>
+        <textarea name="content" id="" cols="30" rows="10" placeholder="Your Tweet..." required></textarea>
         <input type="submit" value="create tweet ">
     </form>
 </section>
@@ -19,14 +19,25 @@
             <div>
                 <% if(locals.user){ %>
                     <form action="/comments/create" method="POST">
-                        <input type="text" name="content" placeholder="Write a comment..">
+                        <input type="text" name="content" placeholder="Write a comment.." required >
                         <input type="hidden" name="tweet" id="" value="<%= tweet._id %>">
                         <input type="submit" value="Add Comment">
                     </form>    
                 <% } %> 
+                <div>
+                    <ul>
+                        <% for(comment of tweet.comments) { %>
+                            <p>
+                                <%= comment.content %> 
+                                <br>
+                                <small><%= comment.user.name %> </small>
+                            </p>
+                        <% } %>  
+                    </ul>
+                </div>
             </div>
 
-            <hr/>
+            <hr>
         <% } %> 
     </ul>
 </div>
