--- a/src/views/users/user_profile.ejs
+++ b/src/views/users/user_profile.ejs
@@ -1,5 +1,13 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-<h1>Welcome  <%="Manjot"%></h1>
+<h1>Welcome  <%=title%></h1>
 
-<p><%= user.name %></p>
-<p><%= user.email %></p>
+<% if(user.id == profile_user.id) { %> 
+    <h3>Update your username</h3>
+    <form action="/users/update/<%=user.id%>" method="POST">
+        <input type="text" name="name" placeholder="Your name" value="<%= profile_user.name %> ">
+        <input type="submit" value="Update user">
+    </form>
+<% }  %> 
+
+<p><%= profile_user.name %></p>
+<p><%= profile_user.email %></p>
